--- a/Article-preview-component.css
+++ b/Article-preview-component.css
@@ -5,7 +5,7 @@
 }
 html{
     font-size: 16px;
-
+    font-family: 'Manrope', sans-serif;
 }
 body{
     display:grid;
@@ -147,14 +147,47 @@ align-items: center;
 font-size: .7rem;
 letter-spacing: 3px;
 color: hsl(212, 23%, 69%);
-
 }
 
-/* .triangleDiv{
-width: 0;
-height: 0;
-border-left: 50px solid transparent;
-border-right: 50px solid transparent;
-border-bottom: 50px solid hsl(217, 19%, 35%);
-transform: rotateX(0deg,360deg);
-} */
+@media only screen and (max-width: 850px) {
+    body{
+        display: flex;
+        flex-direction: column;
+        
+        align-items: center;
+        padding: 0;
+        width: 850px;
+    }
+
+    .sec2{
+        margin-left: 3rem;
+    
+    }
+
+    img{
+        width: 100%; 
+
+    }
+}
+
+@media only screen and (max-width: 350px) {
+    body{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 0;
+        width: min-content;
+    }
+
+    .sec2{
+        margin-left: 3rem;
+    
+    }
+
+    img{
+        width: 100%; 
+        
+    }
+
+   
+}
